--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
+:root {
+    font-family: 'Times New Roman', Times, serif;
+}
+
 #title {
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+}
+
+#input {
+    text-align: center;
 }
